--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -38,3 +38,18 @@ a, a:visited, a:hover {
     align-items: center;
   }
 }
+
+// Helper classes
+.hide-for-mobile {
+  // hide for tablet and mobile
+  @include breakpoint-down(medium) {
+    display: none;
+  }
+}
+
+.hide-for-desktop {
+  // hide for desktop viewport widths
+  @include breakpoint-up(large) {
+    display: none;
+  }
+}
