--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,6 +1,9 @@
 .header {
+  padding: 1.75rem 10.3125rem 2.125rem;
+  border-bottom: $grayishBlue .0625rem solid;
   
-  padding: 1.25rem 1.5rem;
+  nav {
+  }
 
   &__menu { // Mobile menu
 
@@ -29,21 +32,32 @@
   }
 
   &__links {
+    margin-left: 3.5rem;
+    
     a {
       font-size: $font-sm;
+      transition: all 200ms ease-in-out;
+
+      &:not(:last-child) {
+        margin-right: 2.125rem;
+      }
+
+      &:hover {
+        color: $veryVarkBlue;
+      }
     }
   }
 
   &__cart {
     img {
-      width: 1.25rem;
-      margin-right: 1.375rem;
+      width: 1.5rem;
+      margin-right: 2.875rem;
     }
   }
 
   &__user-avatar {
     img {
-      width: 1.5625rem;
+      width: 3.25rem;
     }
   }
 }
